--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "http://jk51887.github.io/nrppw-project",
   "name": "node-ssl-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +23,8 @@
     "path": "^0.12.7",
     "pug": "^3.0.2",
     "swig": "^1.4.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
